Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,9 +211,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('RM', 'LSTAT', 0.786),\n",
+       " ('RM', 'TAX', 0.775),\n",
+       " ('RM', 'RAD', 0.768),\n",
+       " ('RM', 'PTRATIO', 0.763),\n",
+       " ('INDUS', 'RM', 0.758)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sorted(interactions, key=lambda inter: inter[2], reverse=True)[:5]"
    ]
